tests/fixtures/invalid/str_pow_none.py
# Cannot power Str and None
x: str = "hello" ** None
